[gd_scene load_steps=2 format=2]

[ext_resource path="res://Stars/Stars.gd" type="Script" id=1]

[node name="Stars" type="Node2D"]
script = ExtResource( 1 )

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
